--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
+    "@octokit/webhooks": "^14.1.2",
     "@prisma/client": "^6.13.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
