--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "openai": "^5.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
